# vera-vibe

./: .gitignore  PERFORMANCE_BENCHMARK.md  README.md  architecture-qa.md  implementation_summary.md  note.md  parallel_profiling_analysis.md  plan.md  spec-v1.md  spec-v2.md  test_e2e.sh  web-verifier.html
brevis-vera-zk/: Cargo.toml  keygen_test.txt
brevis-vera-zk/aggregator-aot/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_000/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_000/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_001/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_001/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_002/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_002/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_003/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_003/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_004/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_004/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_005/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_005/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_006/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_006/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_007/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_007/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_008/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_008/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_009/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_009/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_010/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_010/src/: lib.rs
brevis-vera-zk/aggregator-aot/chunks/chunk_011/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_012/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_013/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_014/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_015/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_016/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_017/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_018/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_019/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_020/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_021/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_022/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_023/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_024/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_025/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_026/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_027/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_028/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_029/: Cargo.toml
brevis-vera-zk/aggregator-aot/chunks/chunk_030/: Cargo.toml
brevis-vera-zk/aggregator-aot/src/: lib.rs
brevis-vera-zk/aggregator-app/: Cargo.toml
brevis-vera-zk/aggregator-app/elf/: riscv32im-pico-zkvm-elf
brevis-vera-zk/aggregator-app/src/: main.rs
brevis-vera-zk/aot-runtime/src/: dispatch.rs
brevis-vera-zk/app/: Cargo.toml
brevis-vera-zk/app/elf/: riscv32im-pico-zkvm-elf
brevis-vera-zk/app/src/: main.rs
brevis-vera-zk/data/19ce1655-208e-4a15-a0fa-45ccc2d3c4c8/: cert_chain.json
brevis-vera-zk/data/58d41ef6-a558-4536-a76f-7d44a18ca1ff/: cert_chain.json
brevis-vera-zk/data/668f0278-274a-4654-9d77-a8d66c784321/: cert_chain.json
brevis-vera-zk/data/83ca3429-85f6-4d4d-81cf-3338e5bf50e1/: cert_chain.json
brevis-vera-zk/data/909a5cc4-5264-4674-ba5d-87c63cc88ba6/: cert_chain.json
brevis-vera-zk/data/bdc3816a-7adc-4173-b554-7b20e27faaef/: cert_chain.json
brevis-vera-zk/data/be8966b5-b1ce-4c3d-91b2-e636879d54a7/: cert_chain.json
brevis-vera-zk/data/c17f9fa5-a867-489e-aab8-596648dc87bf/: cert_chain.json
brevis-vera-zk/data/e02628f6-1eb0-49ba-8e12-309614d406ab/: cert_chain.json
brevis-vera-zk/lib/: Cargo.toml
brevis-vera-zk/lib/src/: lib.rs
brevis-vera-zk/mock-signer/: Cargo.toml
brevis-vera-zk/mock-signer/src/: main.rs
brevis-vera-zk/prover/: Cargo.toml
brevis-vera-zk/prover/src/: main.rs
brevis-vera-zk/shard-aot/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_000/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_001/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_002/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_003/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_004/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_005/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_006/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_007/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_008/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_009/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_010/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_011/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_012/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_013/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_014/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_015/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_016/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_017/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_018/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_019/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_020/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_021/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_022/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_023/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_024/: Cargo.toml
brevis-vera-zk/shard-aot/chunks/chunk_025/: Cargo.toml
brevis-vera-zk/shard-aot/src/: lib.rs
brevis-vera-zk/shard-app/: Cargo.toml
brevis-vera-zk/shard-app/elf/: riscv32im-pico-zkvm-elf
brevis-vera-zk/shard-app/src/: main.rs
brevis-vera-zk/web-server/: Cargo.toml
brevis-vera-zk/web-server/src/: main.rs
docs/: CODE_STRUCTURE.md  (+13 more)
(+51 files in other folders)
