[workspace]
members = [ 
    "lib",
    "app", 
    "prover",
    "mock-signer",
    "shard-app",
    "aggregator-app",
]
resolver = "2"

[workspace.dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
p256 = { version = "0.13.2", features = ["ecdsa", "serde"] }
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = "1.0.96"
base64 = "0.22.1"
