[workspace]
members = [ 
    "lib",
    "app", 
    "prover",
    "mock-signer",
    "shard-app",
    "aggregator-app",
    "shard-aot",
    "shard-aot/chunks/*",
    "aggregator-aot",
    "aggregator-aot/chunks/*",
    "aot-runtime",
    "vm",
    "derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["zkvm", "pico"]
categories = ["cryptography"]

[workspace.dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico" }
pico-vm = { path = "vm" }
pico-derive = { path = "derive" }
pico-aot-runtime = { path = "aot-runtime" }
shard-aot = { path = "shard-aot" }
aggregator-aot = { path = "aggregator-aot" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.139"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
p256 = { version = "0.13.2", features = ["ecdsa", "serde", "expose-field"] }
sha2 = "0.10.8"
hex = "0.4.3"
anyhow = { version = "1.0.96", default-features = false }
base64 = "0.22.1"
log = "0.4.21"

# p3
p3-air = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-field = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-commit = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-matrix = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-baby-bear = { git = "https://github.com/brevis-network/Plonky3.git", features = ["nightly-features"], rev = "f5056c9" }
p3-koala-bear = { git = "https://github.com/brevis-network/Plonky3.git", features = ["nightly-features"], rev = "f5056c9" }
p3-util = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-challenger = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-dft = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-fri = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-goldilocks = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-keccak = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-keccak-air = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-blake3 = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-mds = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-merkle-tree = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-poseidon2 = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-symmetric = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-uni-stark = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-maybe-rayon = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-bn254-fr = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-mersenne-31 = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-circle = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }
p3-monty-31 = { git = "https://github.com/brevis-network/Plonky3.git", rev = "f5056c9" }

# misc
amcl = { package = "snowbridge-amcl", version = "1.0.2", default-features = false, features = ["bls381"] }
arrayref = "0.3.8"
backtrace = "0.3.71"
bincode = "1.3.3"
bytemuck = "1.16.3"
cfg-if = "1.0.0"
clap = { version = "4.5.13", features = ["derive", "env"] }
cpu-time = "1.0.0"
crossbeam = "0.8.4"
core_affinity = "0.8"
csv = "1.3"
curve25519-dalek = { version = "4.1.2" }
dashmap = "6.1.0"
dashu = "0.4.2"
derive_more = { version = "2.0", features = ["constructor"] }
elf = "0.7.4"
elliptic-curve = "0.13.8"
env_logger = "0.11.6"
eyre = "0.6.12"
ff = { version = "0.13", features = ["derive", "derive_bits"] }
futures = "0.3"
generic-array = { version = "1.1.0", features = ["alloc", "serde"] }
halo2curves  = "0.7.0"
bls12_381 = "0.7.1"
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }
hybrid-array = "0.2.1"
itertools = "0.13"
k256 = { version = "0.13.3", features = ["expose-field"] }
lazy_static = "1.5.0"
num = { version = "0.4.3" }
num-bigint = "0.4.6"
num-traits = "0.2"
num_cpus = "1.16"
once_cell = "1.20"
paste = "1.0.15"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.5"
rayon = "1.10"
rayon-scan = "0.1.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
rrs_lib = { package = "rrs-succinct", version = "0.1.0" }
rug = "1.26.1"
serde_with = "3.9.0"
static_assertions = "1.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
syn = { version = "1.0", features = ["full"] }
sysinfo = "0.30.13"
thiserror = "1.0.63"
tikv-jemallocator = "0.6"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tracing = "0.1.40"
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
typenum = "1.17.0"
vec_map = { version = "0.8.2", features = ["serde"] }
zkhash = "0.2.0"
