[package]
name = "brevis-vera-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
sha2 = { git = "https://github.com/brevis-network/hashes.git", package = "sha2", branch = "sha2-0.10.8-v1.0.0", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }