[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-sdk = { workspace = true }
bincode = "1.3.3"
brevis-vera-lib = { path = "../lib" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
clap = { version = "4.5.41", features = ["derive"] }
rayon = "1.10.0"